Updated to use Gemini API

--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
                 $("#submitbtn").prop("disabled", true); // Disable button
     
                 $.ajax({
-                    url: 'YOUR_VERCEL_DEPLOYMENT_URL/api/generate_resume', // Your Vercel API endpoint
+                    url: 'https://vercel.com/shashwats-projects-9daf2fce/resume/DStVeViPw6PqpF9UVNEr1fgjMvpq/api/generate_resume', // Your Vercel API endpoint
                     type: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify({
