Updated API URL in resume.html

--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
                 $("#submitbtn").prop("disabled", true); // Disable button
     
                 $.ajax({
-                    url: 'https://resume-eight-lemon.vercel.app/api/generate_resume',
+                    url: 'https://resume-eight-lemon.vercel.app/api/generate_resume.py',
                     type: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify({
